--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
+
+  <link rel="manifest" href="manifest.json">
+
   <title>Budget Tracker</title>
 </head>
 <body>
@@ -42,6 +45,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="js/idb.js"></script>
   <script src="js/index.js"></script>
 </body>
 <script>
@@ -51,6 +55,6 @@
       .then(() => console.log('Service worker registered successfully'))
       .catch(error => console.log('Service worker registration failed:', error))
     }
-  })
+  })()
 </script>
 </html>
